<resources>

    <string name="app_name">Video Manager</string>
    <string name="label_title">Video Title</string>
    <string name="hint_title">Type title</string>
    <string name="label_format">Format</string>
    <string name="form_horizontal">Horizontal (YouTube)</string>
    <string name="form_vertical">Vertical (TikTok)</string>
    <string name="label_channel">Select Channel</string>
    <string name="label_date">Release Date</string>
    <string name="menu_add">Add</string>
    <string name="menu_about">About</string>
    <string name="menu_channels">Channels</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_save">Save</string>
    <string name="menu_clear">Clear</string>
    <string name="msg_cleared">Fields cleared</string>
    <string name="msg_error">Fill all fields</string>
    <string name="msg_removed">Removed successfully</string>
    <string name="title_confirm">Warning</string>
    <string name="msg_confirm_delete">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_settings">Settings</string>
    <string name="label_suggest">Suggest last video title</string>


</resources>